# Copyright 2015 Google Inc. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  See the
# License for the specific language governing permissions and limitations under
# the License.

# The project "logle" is written in C++.
project(logle CXX C)
cmake_minimum_required(VERSION 2.8.12)

# Ensure that the proto libraries are installed.
find_package(Protobuf REQUIRED)
if(NOT PROTOBUF_FOUND)
  message(FATAL_ERROR "Please install the protobuf libraries.")
endif()
include_directories(${PROTOBUF_INCLUDE_DIR})

# Ensure that the Boost libraries are installed. In addition to the Boost core
# libraries, the regex library has to be added separately.
set(Boost_USE_STATIC_LIBS OFF)
set(Boost_USE_MULTITHREADED OFF)
set(Boost_USE_STATIC_RUNTIME OFF)
find_package(Boost 1.43.0 COMPONENTS regex)
if(NOT Boost_FOUND)
  message(FATAL_ERROR "Please install the Boost libraries.")
endif()
include_directories(${BOOST_INCLUDE_DIR})

# Compiler flags.
set(cxx_base_flags "-Wall -std=c++11")
set(cxx_no_exception_flags "-fno-exceptions")
set(cxx_exception_flags "-fexceptions")
set(cxx_strict_flags
  "-Wextra -Wno-unused-parameter -Wno-missing-field-initializers")
set(cxx_flags "${cxx_base_flags} ${cxx_no_exception_flags} ${cxx_strict_flags}")
set(CMAKE_CXX_FLAGS "${cxx_flags}")

# Paths to search for logle-internal header files.
include_directories(${logle_SOURCE_DIR})
include_directories(${logle_SOURCE_DIR}/util)

# Paths to logle internal libraries.
add_subdirectory(util)
# Directory containing locally installed, third-party libraries.
add_subdirectory(third_party)
# Paths to search for third party libraries.
set(jsoncpp_dir ${CMAKE_CURRENT_BINARY_DIR}/jsoncpp-src/include)
set(gflags_dir ${CMAKE_CURRENT_BINARY_DIR}/gflags-build/include)

# Output from the build process, including source files generated by the
# protobuf compiler, are stored in the directory CMAKE_CURRENT_BINARY_DIR.
include_directories(${CMAKE_CURRENT_BINARY_DIR})

# Generate code for the abstract syntax tree proto.
protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS ast.proto)
add_library(ast_proto STATIC ${PROTO_SRCS} ${PROTO_HDRS})
target_include_directories(ast_proto PUBLIC ${CMAKE_CURRENT_BINARY_DIR})

# Pretty printing of ASTs and purely structural checks.
add_library(ast STATIC ast.h ast.cc)
target_link_libraries(ast
	ast_proto
	${PROTOBUF_LIBRARY})

add_executable(ast_build_test "google/build_test/ast_build_test.cc")
target_link_libraries(ast_build_test
	ast_proto
	${PROTOBUF_LIBRARY})

# Utilities operating on ASTs representing types.
add_library(type_checker STATIC type_checker.h type_checker.cc)
target_link_libraries(type_checker
 	ast
 	ast_proto
	util_logging)

add_library(type STATIC type.h type.cc)
target_link_libraries(type
 	ast
 	ast_proto
	type_checker)

# Utilities operating on ASTs representing values.
add_library(value_checker STATIC value_checker.h value_checker.cc)
target_link_libraries(value_checker
 	ast
 	ast_proto
	util_logging
	util_string_utils)

add_library(value STATIC value.h value.cc)
target_link_libraries(value
 	ast
 	ast_proto
 	type_checker
	util_logging
	util_time_utils
	value_checker)

# The labeled graph library and its utilities.
add_library(labeled_graph STATIC labeled_graph.h labeled_graph.cc)
target_link_libraries(labeled_graph
 	ast_proto
 	type_checker
	util_logging
	util_status
	util_string_utils)

add_library(dot_printer STATIC dot_printer.h dot_printer.cc)
target_link_libraries(dot_printer
 	ast
 	type
 	type_checker
	value
	util_logging
	util_status
	u oggingtil_string_utils)

add_library(graph_transformer STATIC graph_transformer.h graph_transformer.cc)
target_link_libraries(graph_transformer
 	labeled_graph
	util_status)

# Different graph-based analyzers.

# The account access analyzer example.
add_library(account_access_defs STATIC account_access_defs.h account_access_defs.cc)

add_library(account_access_graph STATIC account_access_graph.h account_access_graph.cc)
target_link_libraries(account_access_graph
 	account_access_defs
 	dot_printer
 	labeled_graph
 	type
 	type_checker
 	value
	util_logging
	util_status
	util_string_utils)

add_library(account_access_analyzer STATIC account_access_analyzer.h account_access_analyzer.cc)
target_link_libraries(account_access_analyzer
 	account_access_defs
 	account_access_graph
	util_csv
	util_logging
	util_status
	util_string_utils)

# Curio dependency stream graphs and utilities.
add_library(curio_defs STATIC curio_defs.h curio_defs.cc)

add_library(stream_dependency_graph STATIC stream_dependency_graph.h stream_dependency_graph.cc)
target_link_libraries(stream_dependency_graph
 	curio_defs
 	dot_printer
 	labeled_graph
 	type
 	type_checker
 	value
	util_logging
	util_status
	util_string_utils)

add_library(curio_analyzer STATIC curio_analyzer.h curio_analyzer.cc)
message(STATUS ${jsoncpp_dir})
target_include_directories(curio_analyzer PRIVATE ${jsoncpp_dir})
target_link_libraries(curio_analyzer
 	stream_dependency_graph
	util_logging
	util_status
	util_string_utils)

# Plaso related graphs and utilities.
add_library(plaso_defs STATIC plaso_defs.h plaso_defs.cc)

protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS plaso_event.proto)
add_library(plaso_event_proto STATIC ${PROTO_SRCS} ${PROTO_HDRS})
target_include_directories(plaso_event_proto PUBLIC ${CMAKE_CURRENT_BINARY_DIR})

add_library(plaso_event STATIC plaso_event.h plaso_event.cc)
target_include_directories(plaso_event PRIVATE ${jsoncpp_dir})
target_link_libraries(plaso_event
 	ast_proto
 	plaso_defs
 	plaso_event_proto
 	type
 	value
 	${PROTOBUF_LIBRARY})

add_library(plaso_event_graph STATIC plaso_event_graph.h plaso_event_graph.cc)
target_include_directories(plaso_event_graph PRIVATE ${jsoncpp_dir})
target_link_libraries(plaso_event_graph
 	ast
 	ast_proto
 	plaso_defs
 	plaso_event_proto
 	type
 	value
 	${PROTOBUF_LIBRARY})

add_library(plaso_analyzer STATIC plaso_analyzer.h plaso_analyzer.cc)
target_include_directories(plaso_analyzer PRIVATE ${jsoncpp_dir})
target_link_libraries(plaso_analyzer
 	plaso_defs
 	plaso_event
 	plaso_event_graph
 	util_status
 	util_string_utils)

# The frontend of the tool.
protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS analysis_options.proto)
add_library(analysis_options_proto STATIC ${PROTO_SRCS} ${PROTO_HDRS})
target_include_directories(analysis_options_proto PUBLIC ${CMAKE_CURRENT_BINARY_DIR})

add_library(frontend STATIC frontend.h frontend.cc)
target_include_directories(frontend PRIVATE ${jsoncpp_dir})
target_link_libraries(frontend
 	account_access_analyzer
 	analysis_options_proto
 	curio_analyzer
	plaso_analyzer
	util_csv
 	util_string_utils
 	util_status)
